[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/construction_fork.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/main_menu/background.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/main_menu/platform.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/main_menu/backlight.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/main_menu/button_large.png" type="Texture" id=5]
[ext_resource path="res://themes/text_dpcomic.tres" type="Theme" id=6]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 200, 113 )
texture = ExtResource( 2 )

[node name="platform" type="Sprite" parent="." index="1"]

position = Vector2( 83, 170 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="backlight" type="Sprite" parent="platform" index="0"]

modulate = Color( 0.309804, 0.596078, 0.301961, 0.560784 )
show_behind_parent = true
position = Vector2( -0.870966, -85.9465 )
scale = Vector2( 0.741935, 0.893048 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="Light2D" type="Light2D" parent="platform" index="1"]

position = Vector2( -0.870995, -86.4546 )
scale = Vector2( 0.741935, 0.909091 )
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="platform2" type="Sprite" parent="." index="2"]

position = Vector2( 326, 170 )
texture = ExtResource( 3 )

[node name="backlight2" type="Sprite" parent="platform2" index="0"]

modulate = Color( 0.309804, 0.596078, 0.301961, 0.560784 )
show_behind_parent = true
position = Vector2( -1, -86 )
scale = Vector2( 0.741935, 0.893048 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="Light2D2" type="Light2D" parent="platform2" index="1"]

position = Vector2( -1, -85.9572 )
scale = Vector2( 0.741935, 0.914439 )
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="buttons" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 169.0
margin_top = 24.0
margin_right = 239.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="customize_player" type="Button" parent="buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="NinePatchRect" type="NinePatchRect" parent="buttons/customize_player" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Patch Margin" ]

[node name="Label" type="Label" parent="buttons/customize_player" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "Customize
Player"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="customize_bot" type="Button" parent="buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 67.0
margin_right = 70.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="NinePatchRect" type="NinePatchRect" parent="buttons/customize_bot" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Patch Margin" ]

[node name="Label" type="Label" parent="buttons/customize_bot" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "Customize
Bot"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="back" type="Button" parent="buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 134.0
margin_right = 70.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="NinePatchRect" type="NinePatchRect" parent="buttons/back" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Patch Margin" ]

[node name="Label" type="Label" parent="buttons/back" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 70.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[connection signal="pressed" from="buttons/customize_player" to="." method="_on_customize_player_pressed"]

[connection signal="pressed" from="buttons/customize_bot" to="." method="_on_customize_bot_pressed"]

[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]


